<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/url_input"
            android:text="@string/setup_url_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/setup_url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/password_input"
            android:text="@string/setup_password_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_password_required_hint"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/setup_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/password_confirm_input"
            android:text="@string/setup_password_confirm_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/setup_password_confirm_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/setup_save" />
    </LinearLayout>
</ScrollView>
